@@ -298,6 +298,8 @@ recentchanges.rss.feed2=Recent Changes including minor changes
 recentchanges.rss.feed3=Recent Changes linking to changed version
 recentchanges.rss.feed4=Recent Changes including minor changes and linking to changed version
 recentchanges.title=Recent Changes
+register.caption.accountdetails=Account Details
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Confirm new password
 register.caption.displayname=Display name
 register.caption.email=Email
