@@ -295,6 +295,8 @@ recentchanges.rss.feed2=Seneste rettelser inklusiv mindre rettelser
 recentchanges.rss.feed3=Seneste rettelser med link til rettet version
 recentchanges.rss.feed4=Seneste rettelser inklusiv mindre rettelser og links til rettet version
 recentchanges.title=Seneste \u00E6ndringer
+register.caption.accountdetails=Konto detailjer
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Bekr\u00E6ft nyt kodeord
 register.caption.displayname=Vist navn
 register.caption.email=Email
