@@ -298,6 +298,8 @@ recentchanges.rss.feed2=Aktuelle \u00C4nderungen inklusive kleine \u00C4nderunge
 recentchanges.rss.feed3=Aktuelle \u00C4nderungen mit Link zur ge\u00E4nderten Version
 recentchanges.rss.feed4=Aktuelle \u00C4nderungen inklusive kleine \u00C4nderungen mit Link zur ge\u00E4nderten Version
 recentchanges.title=Neueste \u00C4nderungen
+register.caption.accountdetails=Anmelden
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Neues Passwort best\u00E4tigen
 register.caption.displayname=Angezeigter Name
 register.caption.email=E-Mail
