@@ -298,6 +298,8 @@ recentchanges.rss.feed2=Friss v\u00E1ltoz\u00E1sok az apr\u00F3 v\u00E1ltoz\u00E
 recentchanges.rss.feed3=Friss v\u00E1ltoz\u00E1sok hivatkoz\u00E1ssal az adott v\u00E1ltozatra
 recentchanges.rss.feed4=Friss v\u00E1ltoz\u00E1sok az apr\u00F3 v\u00E1ltoz\u00E1sokkal \u00E9s hivatkoz\u00E1ssal az adott v\u00E1ltozatra
 recentchanges.title=Friss v\u00E1ltoz\u00E1sok
+register.caption.accountdetails=Profil r\u00E9szletei
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=\u00DAj jelsz\u00F3 meger\u0151s\u00EDt\u00E9se
 register.caption.displayname=Megjelen\u00EDtett n\u00E9v
 register.caption.email=E-mail c\u00EDm
