@@ -298,6 +298,8 @@ recentchanges.rss.feed2=Modifica\u00E7\u00F5es Recentes inclusive altera\u00E7\u
 recentchanges.rss.feed3=Modifica\u00E7\u00F5es Recentes apontando para a vers\u00E3o alterada
 recentchanges.rss.feed4=Modifica\u00E7\u00F5es Recentes inclusive altera\u00E7\u00F5es secund\u00E1rias e apontando para a vers\u00E3o alterada
 recentchanges.title=Modifica\u00E7\u00F5es Recentes
+register.caption.accountdetails=Detalhes da conta
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Confime a nova senha
 register.caption.displayname=Nome de exibi\u00E7\u00E3o
 register.caption.email=Email
