@@ -298,6 +298,8 @@ recentchanges.rss.feed2=\u5305\u62EC\u5C0F\u5E45\u4FEE\u6539\u7684\u6700\u8FD1\u
 recentchanges.rss.feed3=\u6307\u5411\u4FEE\u6539\u7684\u6700\u8FD1\u66F4\u65B0
 recentchanges.rss.feed4=\u5305\u62EC\u5C0F\u5E45\u4FEE\u6539\u548C\u4FEE\u6539\u9875\u9762\u7684\u94FE\u63A5\u7684\u6700\u8FD1\u66F4\u65B0
 recentchanges.title=\u6700\u8FD1\u66F4\u65B0
+register.caption.accountdetails=\u8BE6\u7EC6\u8D44\u6599
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=\u786E\u8BA4\u65B0\u5BC6\u7801
 register.caption.displayname=\u663E\u793A\u540D\u79F0
 register.caption.email=\u7535\u5B50\u90AE\u4EF6
